@@ -94,7 +94,7 @@
 #ifdef NETATALK
 #include <netatalk/at.h>
 #include <netatalk/at_var.h>
-#endif NETATALK
+#endif /* NETATALK */
 
 int loioctl __P((struct ifnet *, u_long, caddr_t));
 static void lortrequest __P((int, struct rtentry *, struct sockaddr *));
@@ -310,7 +310,7 @@ if_simloop(ifp, m, af, hlen)
 	        ifq = &atintrq2;
 		isr = NETISR_ATALK;
 		break;
-#endif NETATALK
+#endif /* NETATALK */
 	default:
 		printf("if_simloop: can't handle af=%d\n", af);
 		m_freem(m);
